--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -38,6 +38,19 @@ Created: December 15, 2019
 'Hind Siliguri', sans-serif;
 ----------------------------------------- */
 /* Reboot CSS */
+
+
+:root {
+  --theme-color: #6b1240;
+  /*--theme-color: #413501*/
+   /* --theme-color: #88603c; */
+
+  --font-color: #747794;
+  --background-color: #E9EEFF;
+}
+
+
+
 * {
   margin: 0;
   padding: 0;
@@ -46,9 +59,9 @@ Created: December 15, 2019
 body,
 html {
   font-family: "Hind Siliguri", sans-serif;
-  color: #747794;
+  color: var(--font-color);
   overflow-x: hidden;
-  background-color: #E9EEFF;
+  background-color: var(--background-color);
   scrollbar-width: thin;
   padding-right: 0 !important;
   letter-spacing: -0.5px;
@@ -65,7 +78,7 @@ h6 {
 }
 
 p {
-  color: #747794;
+  color: var(--font-color);
 }
 
 a,
@@ -78,7 +91,7 @@ a:focus {
   outline: 0 solid transparent;
   -webkit-box-shadow: none;
           box-shadow: none;
-  color: #5D027E;
+  color: var(--theme-color);
   font-weight: 500;
 }
 
@@ -143,7 +156,7 @@ img {
   background-color: #020310;
 }
 #scrollUp:hover, #scrollUp:focus {
-  background-color: #5D027E;
+  background-color: var(--theme-color);
 }
 
 input:required,
@@ -236,10 +249,10 @@ textarea:invalid {
 .bg-overlay::after {
   position: absolute;
   content: "";
-  background: #5D027E;
-  background: -webkit-gradient(linear, right top, left top, from(#5D027E), to(#E8C3Cb));
-  background: -o-linear-gradient(right, #5D027E, #E8C3Cb);
-  background: linear-gradient(to left, #5D027E, #E8C3Cb);
+  background: var(--theme-color);
+  background: -webkit-gradient(linear, right top, left top, from(var(--theme-color)), to(#E8C3Cb));
+  background: -o-linear-gradient(right, var(--theme-color), #E8C3Cb);
+  background: linear-gradient(to left, var(--theme-color), #E8C3Cb);
   opacity: 0.85;
   top: 0;
   left: 0;
@@ -287,8 +300,8 @@ textarea:invalid {
 }
 
 .btn-primary {
-  background-color: #5D027E;
-  border-color: #5D027E;
+  background-color: var(--theme-color);
+  border-color: var(--theme-color);
 }
 
 .btn-success {
@@ -304,7 +317,7 @@ textarea:invalid {
 
 .bg-primary,
 .badge-primary {
-  background-color: #5D027E !important;
+  background-color: var(--theme-color) !important;
 }
 
 .bg-danger,
@@ -775,7 +788,7 @@ textarea:invalid {
   line-height: 1.3;
 }
 .preview-iframe-wrapper .preview-content-wrapper .demo-title span {
-  color: #5D027E;
+  color: var(--theme-color);
 }
 .preview-iframe-wrapper .preview-content-wrapper .demo-desc {
   font-size: 1rem;
@@ -880,7 +893,7 @@ textarea:invalid {
   font-weight: 600;
 }
 .preview-footer-area .footer-nav a:hover, .preview-footer-area .footer-nav a:focus {
-  color: #5D027E;
+  color: var(--theme-color);
 }
 .preview-footer-area .footer-logo img {
   max-height: 50px;
@@ -950,7 +963,7 @@ textarea:invalid {
   font-size: 16px;
 }
 .page-nav li a:hover, .page-nav li a:focus {
-  color: #5D027E;
+  color: var(--theme-color);
   background-color: #fef8ff;
 }
 .page-nav li:last-child a {
@@ -1229,7 +1242,7 @@ textarea:invalid {
   font-size: 18px;
 }
 .back-button a:hover, .back-button a:focus {
-  color: #5D027E;
+  color: var(--theme-color);
 }
 
 .logo-wrapper a {
@@ -1324,10 +1337,10 @@ textarea:invalid {
   position: relative;
   width: 100%;
   min-height: 100vh;
-  background: #5D027E;
-  background: -o-linear-gradient(right, #5D027E, #5D027E);
-  background: -webkit-gradient(linear, right top, left top, from(#5D027E), to(#5D027E));
-  background: linear-gradient(to left, #5D027E, #5D027E);
+  background: var(--theme-color);
+  background: -o-linear-gradient(right, var(--theme-color), var(--theme-color));
+  background: -webkit-gradient(linear, right top, left top, from(var(--theme-color)), to(var(--theme-color)));
+  background: linear-gradient(to left, var(--theme-color), var(--theme-color));
   z-index: 10;
   overflow-y: auto;
   padding-top: 2rem;
@@ -1473,7 +1486,7 @@ textarea:invalid {
   cursor: pointer;
 }
 .go-back-btn:hover, .go-back-btn:focus {
-  background-color: #5D027E;
+  background-color: var(--theme-color);
   color: #ffffff;
 }
 
@@ -1528,7 +1541,7 @@ textarea:invalid {
   line-height: 50px;
 }
 .otp-form .nice-select .list {
-  background-color: #5D027E;
+  background-color: var(--theme-color);
 }
 .otp-form .nice-select .list .option:hover,
 .otp-form .nice-select .list .option.focus,
@@ -1597,10 +1610,10 @@ textarea:invalid {
 .suha-offcanvas-wrap {
   width: 240px !important;
   border-right: 0 !important;
-  background: #5D027E;
-  background: -o-linear-gradient(right, #5D027E, #5D027E);
-  background: -webkit-gradient(linear, right top, left top, from(#5D027E), to(#5D027E));
-  background: linear-gradient(to left, #5D027E, #5D027E);
+  background: var(--theme-color);
+  background: -o-linear-gradient(right, var(--theme-color), var(--theme-color));
+  background: -webkit-gradient(linear, right top, left top, from(var(--theme-color)), to(var(--theme-color)));
+  background: linear-gradient(to left, var(--theme-color), var(--theme-color));
 }
 .suha-offcanvas-wrap .btn-close {
   position: absolute;
@@ -1646,7 +1659,7 @@ textarea:invalid {
   width: 46px;
   font-size: 12px;
   border: 3px solid #ffffff;
-  background-color: #5D027E;
+  background-color: var(--theme-color);
   display: inline-block;
   border-radius: 50%;
   color: #ffffff;
@@ -1773,10 +1786,10 @@ li.suha-dropdown-menu .dropdown-trigger-btn.active i {
   position: relative;
   width: 100%;
   height: 100vh;
-  background: #5D027E;
-  background: -o-linear-gradient(right, #5D027E, #5D027E);
-  background: -webkit-gradient(linear, right top, left top, from(#5D027E), to(#5D027E));
-  background: linear-gradient(to left, #5D027E, #5D027E);
+  background: var(--theme-color);
+  background: -o-linear-gradient(right, var(--theme-color), var(--theme-color));
+  background: -webkit-gradient(linear, right top, left top, from(var(--theme-color)), to(var(--theme-color)));
+  background: linear-gradient(to left, var(--theme-color), var(--theme-color));
   z-index: 1;
 }
 
@@ -1937,7 +1950,7 @@ li.suha-dropdown-menu .dropdown-trigger-btn.active i {
 .live-chat-intro {
   position: relative;
   z-index: 1;
-  background-color: #5D027E;
+  background-color: var(--theme-color);
   padding: 2rem 0;
   text-align: center;
   border-radius: 0 0 3rem 3rem;
@@ -2082,7 +2095,7 @@ li.suha-dropdown-menu .dropdown-trigger-btn.active i {
 .user-message-content .user-message-text p {
   display: inline-block;
   margin-bottom: 0.375rem;
-  background-color: #5D027E;
+  background-color: var(--theme-color);
   color: #ffffff;
   padding: 0.625rem 0.75rem;
   border-radius: 0.5rem;
@@ -2301,7 +2314,7 @@ li.suha-dropdown-menu .dropdown-trigger-btn.active i {
 .single-settings .checkbox:checked + .knobs:before {
   content: "";
   left: 24px;
-  background-color: #5D027E;
+  background-color: var(--theme-color);
 }
 .single-settings .checkbox:checked ~ .layer {
   background-color: #fef8ff;
@@ -2488,7 +2501,7 @@ li.suha-dropdown-menu .dropdown-trigger-btn.active i {
      text-overflow: ellipsis;
 }
 .product-card .product-title:hover, .product-card .product-title:focus {
-  color: #5D027E;
+  color: var(--theme-color);
 }
 .product-card .sale-price {
   font-weight: 500;
@@ -2746,7 +2759,7 @@ li.suha-dropdown-menu .dropdown-trigger-btn.active i {
   color: #747794;
 }
 .featured-product-card .product-description .product-title:hover, .featured-product-card .product-description .product-title:focus {
-  color: #5D027E;
+  color: var(--theme-color);
 }
 .featured-product-card .product-description .sale-price {
   margin-bottom: 0;
@@ -2837,7 +2850,7 @@ li.suha-dropdown-menu .dropdown-trigger-btn.active i {
   margin-top: -15px;
   left: 15px;
   font-size: 20px;
-  color: #5D027E;
+  color: var(--theme-color);
   border-radius: 50%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2956,7 +2969,7 @@ li.suha-dropdown-menu .dropdown-trigger-btn.active i {
           transition-duration: 500ms;
 }
 .cart-form .quantity-button-handler:hover {
-  color: #5D027E;
+  color: var(--theme-color);
 }
 
 .p-wishlist-share a {
@@ -2970,7 +2983,7 @@ li.suha-dropdown-menu .dropdown-trigger-btn.active i {
   background-color: #fef8ff;
 }
 .choose-color-radio .form-check-input.blue {
-  background-color: #5D027E;
+  background-color: var(--theme-color);
 }
 .choose-color-radio .form-check-input.yellow {
   background-color: #ffaf00;
@@ -3278,7 +3291,7 @@ li.suha-dropdown-menu .dropdown-trigger-btn.active i {
   color: #747794;
 }
 .cart-table table a:hover, .cart-table table a:focus {
-  color: #5D027E;
+  color: var(--theme-color);
 }
 .cart-table .table td,
 .cart-table .table th {
@@ -3434,10 +3447,10 @@ li.suha-dropdown-menu .dropdown-trigger-btn.active i {
 .order-success-wrapper {
   position: relative;
   width: 100%;
-  background: #5D027E;
-  background: -o-linear-gradient(right, #5D027E, #5D027E);
-  background: -webkit-gradient(linear, right top, left top, from(#5D027E), to(#5D027E));
-  background: linear-gradient(to left, #5D027E, #5D027E);
+  background: var(--theme-color);
+  background: -o-linear-gradient(right, var(--theme-color), var(--theme-color));
+  background: -webkit-gradient(linear, right top, left top, from(var(--theme-color)), to(var(--theme-color)));
+  background: linear-gradient(to left, var(--theme-color), var(--theme-color));
   height: 100vh;
   top: 0;
   left: 0;
@@ -3635,15 +3648,15 @@ li.suha-dropdown-menu .dropdown-trigger-btn.active i {
 }
 .language-area-wrapper input[type=radio]:checked ~ .check,
 .shipping-method-choose input[type=radio]:checked ~ .check {
-  border-color: #5D027E;
+  border-color: var(--theme-color);
 }
 .language-area-wrapper input[type=radio]:checked ~ .check::before,
 .shipping-method-choose input[type=radio]:checked ~ .check::before {
-  background: #5D027E;
+  background: var(--theme-color);
 }
 .language-area-wrapper input[type=radio]:checked ~ label,
 .shipping-method-choose input[type=radio]:checked ~ label {
-  color: #5D027E;
+  color: var(--theme-color);
   background-color: rgba(16, 13, 209, 0.103);
 }
 
@@ -3665,7 +3678,7 @@ li.suha-dropdown-menu .dropdown-trigger-btn.active i {
   display: block;
 }
 .accordian-card .accordian-header button {
-  color: #5D027E;
+  color: var(--theme-color);
   text-align: left;
   padding-left: 0;
   padding-right: 0;
@@ -3674,7 +3687,7 @@ li.suha-dropdown-menu .dropdown-trigger-btn.active i {
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  background-color: #5D027E;
+  background-color: var(--theme-color);
   display: inline-block;
   text-align: center;
   line-height: 30px;
@@ -3689,7 +3702,7 @@ li.suha-dropdown-menu .dropdown-trigger-btn.active i {
           transform: rotate(-90deg);
 }
 .accordian-card .accordian-header button:hover, .accordian-card .accordian-header button:focus {
-  color: #5D027E;
+  color: var(--theme-color);
 }
 .accordian-card .accordian-header button.collapsed > span {
   color: #020310;
@@ -3720,7 +3733,7 @@ li.suha-dropdown-menu .dropdown-trigger-btn.active i {
   height: auto !important;
 }
 .faq-search-form input:focus {
-  border-color: #5D027E;
+  border-color: var(--theme-color);
 }
 .faq-search-form button {
   position: absolute;
@@ -3736,10 +3749,10 @@ li.suha-dropdown-menu .dropdown-trigger-btn.active i {
 }
 
 .support-wrapper .faq-heading {
-  background: #5D027E;
-  background: -webkit-gradient(linear, left top, right top, from(#5D027E), to(#00b894));
-  background: -o-linear-gradient(left, #5D027E, #00b894);
-  background: linear-gradient(to right, #5D027E, #00b894);
+  background: var(--theme-color);
+  background: -webkit-gradient(linear, left top, right top, from(var(--theme-color)), to(#00b894));
+  background: -o-linear-gradient(left, var(--theme-color), #00b894);
+  background: linear-gradient(to right, var(--theme-color), #00b894);
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
   background-clip: text;
@@ -3879,7 +3892,7 @@ li.suha-dropdown-menu .dropdown-trigger-btn.active i {
      text-overflow: ellipsis;
 }
 .blog-card .post-content .post-title:hover, .blog-card .post-content .post-title:focus {
-  color: #5D027E;
+  color: var(--theme-color);
 }
 .blog-card .post-content .post-meta a {
   font-size: 12px;
@@ -3887,7 +3900,7 @@ li.suha-dropdown-menu .dropdown-trigger-btn.active i {
   color: #747794;
 }
 .blog-card .post-content .post-meta a:hover, .blog-card .post-content .post-meta a:focus {
-  color: #5D027E;
+  color: var(--theme-color);
 }
 .blog-card .post-content .post-meta a i {
   margin-right: 0.25rem;
@@ -3936,7 +3949,7 @@ li.suha-dropdown-menu .dropdown-trigger-btn.active i {
   font-weight: 500;
 }
 .blog-catagory-card a:hover span, .blog-catagory-card a:focus span {
-  color: #5D027E;
+  color: var(--theme-color);
 }
 
 .blog-details-post-thumbnail {
@@ -4138,10 +4151,10 @@ li.suha-dropdown-menu .dropdown-trigger-btn.active i {
 
 .discount-coupon-card {
   border-radius: 6px;
-  background: #5D027E;
-  background: -o-linear-gradient(right, #5D027E, #5D027E);
-  background: -webkit-gradient(linear, right top, left top, from(#5D027E), to(#5D027E));
-  background: linear-gradient(to left, #5D027E, #5D027E);
+  background: var(--theme-color);
+  background: -o-linear-gradient(right, var(--theme-color), var(--theme-color));
+  background: -webkit-gradient(linear, right top, left top, from(var(--theme-color)), to(var(--theme-color)));
+  background: linear-gradient(to left, var(--theme-color), var(--theme-color));
 }
 .discount-coupon-card .discountIcon {
   -webkit-box-flex: 0;
@@ -4333,10 +4346,10 @@ li.suha-dropdown-menu .dropdown-trigger-btn.active i {
       -ms-flex: 0 0 30px;
           flex: 0 0 30px;
   max-width: 30px;
-  background: #5D027E;
-  background: -o-linear-gradient(right, #5D027E, #5D027E);
-  background: -webkit-gradient(linear, right top, left top, from(#5D027E), to(#5D027E));
-  background: linear-gradient(to left, #5D027E, #5D027E);
+  background: var(--theme-color);
+  background: -o-linear-gradient(right, var(--theme-color), var(--theme-color));
+  background: -webkit-gradient(linear, right top, left top, from(var(--theme-color)), to(var(--theme-color)));
+  background: linear-gradient(to left, var(--theme-color), var(--theme-color));
   color: #ffffff;
   text-align: center;
   font-size: 1rem;
@@ -4564,7 +4577,7 @@ li.suha-dropdown-menu .dropdown-trigger-btn.active i {
   border-color: rgba(255, 255, 255, 0.2);
 }
 [theme-color=dark] .cart-icon-wrap a span {
-  background-color: #5D027E;
+  background-color: var(--theme-color);
 }
 [theme-color=dark] .dropdown-menu {
   background-color: #332858;
